--- a/hw1/index.html
+++ b/hw1/index.html
@@ -21,30 +21,7 @@
         </button>
       </div>
     </header>
-    <div class="center">
-      <!-- <div class="box">
-        <div class="q">
-          <img class="img" src="images/mack.jpeg" />
-        </div>
-        <div class="w">
-          <p class="title">Apple MacBook Air</p>
-          <p class="description">Ноутбук</p>
-          <div class="stars">
-            <img class="star" src="images/star.png" alt="" />
-            <img class="star" src="images/star.png" alt="" />
-            <img class="star" src="images/star.png" alt="" />
-            <img class="star" src="images/star.png" alt="" />
-            <img class="star" src="images/star.png" alt="" />
-            <p class="feedback">3647</p>
-          </div>
-          <div class="stock">● В НАЛИЧИИ</div>
-        </div>
-        <button class="e">
-          <p class="cart">20000 ₽</p>
-          <span class="material-symbols-outlined"> add</span>
-        </button>
-      </div> -->
-    </div>
-    <script src="new.js"></script>
+    <div class="center">//вставка из скрипта</div>
+    <script src="app.js"></script>
   </body>
 </html>
